--- a/libraries.html
+++ b/libraries.html
@@ -67,6 +67,7 @@
         <li>&centerdot;&nbsp;<a href="#UB.scad">UB.scad</a></li>
         <li>&centerdot;&nbsp;<a href="#FunctionalOpenSCAD">Functional OpenSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#constructive">Constructive</a></li>
+        <li>&centerdot;&nbsp;<a href="#StoneAgeLib">StoneAgeLib</a></li>
         <li>&centerdot;&nbsp;<a href="#BOLTS">BOLTS</a></li>
         <li>&centerdot;&nbsp;<a href="#Assets">Asset Collection</a></li>
       </ul>
@@ -170,6 +171,18 @@
           <a href="https://github.com/solidboredom/constructive/blob/main/tutorials/tutorial-partIII.md">Part III</a>
         </li>
         <li>License: <a href="https://spdx.org/licenses/GPL-2.0-only.html">GPL-2.0-only</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/stone-age-lib.gif" width="200" align="right">
+      <h2 id="StoneAgeLib">StoneAgeLib</h2>
+      <p>StoneAgeLib - All sorts of scripts for OpenSCAD. The scripts are for 3D models for 3D printing.</p>
+      <p>An important aspect of this library is the CC0 (Public Domain) license.</p>
+      <p>This library is for a OpenSCAD version of at least 2025 with the features turned on and using "Manifold".</p>
+      <ul>
+        <li><a href="https://github.com/Stone-Age-Sculptor/StoneAgeLib">Library</a></li>
+        <li><a href="https://github.com/Stone-Age-Sculptor/StoneAgeLib/tree/main/examples">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -350,7 +363,7 @@
         <li><a href="https://github.com/dinther/pathbuilder/wiki">Wiki</a></li>
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
-      <p style="clear: both"></p>      
+      <p style="clear: both"></p>
 
       <!-- <img class="libimg" src="images/a2d.gif" width="200" align="right"> -->
       <h2 id="a2d">Altair's 2D Library for OpenSCAD</h2>
