Add picker to every page

--- a/downloads.html
+++ b/downloads.html
@@ -12,6 +12,8 @@
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">  
+	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 
@@ -74,6 +76,14 @@
     <a href="https://opencollective.com/openscad/donate" target="_blank">
       <img src="assets/img/donate-opencollective.png" alt="Donate on Opencollective" width="200" height="33">
     </a>
+	</div>
+	<div id="displayMode" class="right">
+		<div class="currentMode"><i class="fa fa-circle-half-stroke"></i> Theme</div>
+    <ul class="pickMode" style="display: none;">
+      <li class="system"><i class="fa fa-circle-half-stroke"></i> OS Default</li>
+      <li class="light"><i class="fa fa-sun"></i> Light</li>
+      <li class="dark"><i class="fa fa-moon"></i> Dark</li>
+    </ul>
 	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
