--- a/community.html
+++ b/community.html
@@ -34,6 +34,14 @@
       <img src="assets/img/donate-opencollective.png" alt="Donate on Opencollective" width="200" height="33">
     </a>
 	</div>
+	<div id="displayMode" class="right">
+		<div class="currentMode"><i class="fa fa-circle-half-stroke"></i> Theme</div>
+    <ul class="pickMode" style="display: none;">
+      <li class="system"><i class="fa fa-circle-half-stroke"></i> OS Default</li>
+      <li class="light"><i class="fa fa-sun"></i> Light</li>
+      <li class="dark"><i class="fa fa-moon"></i> Dark</li>
+    </ul>
+	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
 		<h2 class="subtitle" style="position:relative; left:45px;">The Programmers Solid 3D CAD Modeller</h2>
