--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	</script>
 	<script src="inc/mac_release_links.js"></script>
 	<script src="inc/win_release_links.js"></script>
-	<script src="assets/js/home.js"></script>
 	<script src="assets/js/header.js"></script>
+	<script src="assets/js/home.js"></script>
 <style>
 .header {
   background-color: #444;
@@ -68,6 +68,14 @@
     <a href="https://opencollective.com/openscad/donate" target="_blank">
       <img src="assets/img/donate-opencollective.png" alt="Donate on Opencollective" width="200" height="33">
     </a>
+	</div>
+	<div id="displayMode" class="right">
+		<div class="currentMode"><i class="fa fa-circle-half-stroke"></i> Theme</div>
+    <ul class="pickMode" style="display: none;">
+      <li class="system"><i class="fa fa-circle-half-stroke"></i> OS Default</li>
+      <li class="light"><i class="fa fa-sun"></i> Light</li>
+      <li class="dark"><i class="fa fa-moon"></i> Dark</li>
+    </ul>
 	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
