--- a/community.html
+++ b/community.html
@@ -2,7 +2,9 @@
 
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <script src="assets/js/display-mode.js"></script>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Community</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
