--- a/documentation-articles.html
+++ b/documentation-articles.html
@@ -2,10 +2,13 @@
 
 <html lang="en">
 <head>
+  <script src="assets/js/display-mode.js"></script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Documentation</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
