--- a/documentation-books.html
+++ b/documentation-books.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
 <head>
+  <script src="assets/js/display-mode.js"></script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Documentation</title>
 
