--- a/downloads.html
+++ b/downloads.html
@@ -6,6 +6,8 @@
 	directly to download the file you wish to use. Thanks.
 	<![endif]-->
 <head>
+	<script src="assets/js/display-mode.js"></script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Downloads</title>
 
@@ -13,6 +15,7 @@
 
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">  
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
