--- a/libraries.html
+++ b/libraries.html
@@ -2,13 +2,16 @@
 
 <html lang="en">
 <head>
+  <script src="assets/js/display-mode.js"></script>
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>OpenSCAD - Libraries</title>
 
   <link href="assets/css/style.css" rel="stylesheet">
 
   <link href="assets/fonts/open-sans/all.css" rel="stylesheet">
-	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">  
+	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">  
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
   <script src="assets/js/jquery-1.9.1.min.js"></script>
