Add Ubuntu 24.10. Add note about OpenSUSE and Fedora builds being disabled.

--- a/downloads.html
+++ b/downloads.html
@@ -661,49 +661,18 @@
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_24.04/ ./</code></small>
 				</pre>
 
-				<h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
-
-				<h3>openSUSE Leap 15.3 (64-bit only)</h3>
+        <h3>Ubuntu 24.10 (x86_64, aarch64)</h3>
 				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.3/</code></small>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_24.10/ ./</code></small>
 				</pre>
 
-				<h3>openSUSE Leap 15.4 (64-bit only)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.4/</code></small>
-				</pre>
+        <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 
-				<h3>openSUSE Tumbleweed</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Tumbleweed/</code></small>
-				</pre>
+        <p>OpenSUSE nightly builds on OBS are currently disabled, if you are interested in helping to bring them back, please get in touch.</p>
 
-				<h2>Fedora packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
+        <h2>Fedora packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 
-				<h3>Fedora 34 (x86_64, armv7l, aarch64, ppc64le)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_34/</code></small>
-				</pre>
-
-				<h3>Fedora 35 (x86_64, armv7l, aarch64, ppc64le)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_35/</code></small>
-				</pre>
-
-				<h3>Fedora 36 (x86_64, armv7l, aarch64, ppc64le)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_36/</code></small>
-				</pre>
-
-				<h3>Fedora 37 (x86_64, armv7l, aarch64, ppc64le)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_37/</code></small>
-				</pre>
-
-				<h3>Fedora Rawhide (x86_64, i586)</h3>
-				<pre>
-					<small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_Rawhide/</code></small>
-				</pre>
+        <p>Fedora nightly builds on OBS are currently disabled, if you are interested in helping to bring them back, please get in touch.</p>
 
 				<h2>Arch Linux</h2>
 				To install OpenSCAD from git on Arch Linux the
