--- a/community.html
+++ b/community.html
@@ -79,7 +79,7 @@
 <li><a href="#other">Other</a></li>
 <li><a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
     <a href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky"><i class="fab fa-bluesky"></i></a> &nbsp;
-    <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
+    <a href="https://floss.social/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
     <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a></li>
 		</ul>
 	</div>
@@ -160,7 +160,7 @@
     <section id="social-media">
       <h1>Social Media</h1>
       <ul>
-        <li>Mastodon: <a href="https://fosstodon.org/@OpenSCAD">@OpenSCAD@fosstodon.org</a></li>
+        <li>Mastodon: <a href="https://floss.social/@OpenSCAD">@OpenSCAD@floss.social</a></li>
         <li>Bluesky: <a href="https://bsky.app/profile/openscad.bsky.social">@openscad.bsky.social</a></li>
       </ul>
     </section>
