--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
 
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
-	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">	
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
@@ -83,7 +83,7 @@
 		</ul>
 		<h1>#SCADvent</h1>
 		<ul>
-			<li><a href="https://fosstodon.org/tags/SCADvent">...on Fosstodon</a> <span class="fab fa-mastodon fa-xs"></span></li>
+			<li><a href="https://floss.social/tags/SCADvent">...on Mastodon</a> <span class="fab fa-mastodon fa-xs"></span></li>
 			<li><a href="advent-calendar-2019/">2019 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2020/">2020 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2021/">2021 Advent Calendar</a></li>
