--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div style="padding-bottom: 0.5rem;">
     <a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
     <a href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky"><i class="fab fa-bluesky"></i></a> &nbsp;
-    <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
+    <a href="https://floss.social/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
     <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a>
     </div>
 		<h1>Recent News</h1>
@@ -121,7 +121,7 @@
         <div class="ticker-move ticker-animation">
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Discussion, talk with Humans: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">User Manual</a> and <a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">Tutorial</a> on Wikibooks</div></div>
-          <div class="ticker-item"><div class="ticker-content">OpenSCAD on <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> and <a href="https://bsky.app/profile/openscad.bsky.social">Bluesky</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">OpenSCAD on <a href="https://floss.social/@OpenSCAD">Mastodon</a> and <a href="https://bsky.app/profile/openscad.bsky.social">Bluesky</a></div></div>
           <div class="ticker-item"><div class="ticker-content">Find OpenSCAD Designs on <a href="https://www.printables.com/search/models?q=tag:openscad">Printables</a> and <a href="https://www.thingiverse.com/tag:openscad">Thingiverse</a></div></div>
           <div class="ticker-item"><div class="ticker-content"><a href="https://openscad.org/documentation-books.html">OpenSCAD Books</a></div></div>
           <div class="ticker-item"><div class="ticker-content">Prototype: OpenSCAD <a href="https://ochafik.com/openscad2/">Playground</a> directly in your WebBrowser</div></div>
