--- a/advent-calendar-2022/index.html
+++ b/advent-calendar-2022/index.html
@@ -525,7 +525,7 @@ a.link:hover {
       <br><span class="gray small">Advent Calendar 2022</span>
       <br><span class="gray small">#SCADvent &nbsp;
       <a class="gray" href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a>
-      <a class="gray" href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
+      <a class="gray" href="https://floss.social/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
       </span>
       <img src="https://openscad.org/images/openscad.png">
     </p>
