--- a/advent-calendar-2023/index.html
+++ b/advent-calendar-2023/index.html
@@ -524,7 +524,7 @@ a.link:hover {
       <span class="green">Open</span><span class="yellow">SCAD</span>
       <br><span class="gray small">Advent Calendar 2023</span>
       <br><span class="gray small">#SCADvent &nbsp;
-      <a class="gray" href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
+      <a class="gray" href="https://floss.social/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
       </span>
       <img src="https://openscad.org/images/openscad.png">
     </p>
