Add SCON library.

--- a/libraries.html
+++ b/libraries.html
@@ -11,7 +11,7 @@
 
   <link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
-	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">  
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
   <script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -98,6 +98,7 @@
         <li>&centerdot;&nbsp;<a href="#STEMFIE">STEMFIE Parts Library</a></li>
         <li>&centerdot;&nbsp;<a href="#catchnhole">Catch'n'Hole</a></li>
         <li>&centerdot;&nbsp;<a href="#pathbuilder">Pathbuilder</a></li>
+        <li>&centerdot;&nbsp;<a href="#scon">SCON - JSON for OpenSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#a2d">Altair's 2D Library</a></li>
       </ul>
     </ul>
@@ -374,6 +375,16 @@
         <li><a href="https://github.com/dinther/pathbuilder">Library</a></li>
         <li><a href="https://github.com/dinther/pathbuilder/blob/main/README.md">Documentation</a></li>
         <li><a href="https://github.com/dinther/pathbuilder/wiki">Wiki</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libim" src="images/scon.gif" width="200" align="right">
+      <h2 id="scon">SCON - JSON for OpenSCAD</h2>
+      <p>SCON is a convenient configuration data subset for OpenSCAD similar to JSON for Javascript.</p>
+      <ul>
+        <li><a href="https://github.com/wmacevoy/openscad-scon/">Library</a></li>
+        <li><a href="https://github.com/wmacevoy/openscad-scon/blob/main/README.md">Documentation</a></li>
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
