Remove Ubuntu 23.04, add Ubuntu 25.04 (no aarch64 yet).

--- a/downloads.html
+++ b/downloads.html
@@ -664,11 +664,6 @@
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_22.04/ ./</code></small>
 				</pre>
 
-				<h3>Ubuntu 23.04 (x86_64, aarch64)</h3>
-				<pre>
-					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_23.04/ ./</code></small>
-				</pre>
-
 				<h3>Ubuntu 23.10 (x86_64, aarch64)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_23.10/ ./</code></small>
@@ -682,6 +677,11 @@
         <h3>Ubuntu 24.10 (x86_64, aarch64)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_24.10/ ./</code></small>
+				</pre>
+
+				<h3>Ubuntu 25.04 (x86_64 only, aarch64 not yet supported)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_25.04/ ./</code></small>
 				</pre>
 
         <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
