Add big note about Release vs. Nightly builds.

--- a/downloads.html
+++ b/downloads.html
@@ -128,6 +128,22 @@
 	</div>
 
 	<article>
+
+    <section-head>
+      <div class="link-grid">
+        <div class="link-button">
+          <a href="#osx"><i class="fas fa-box-open selected"></i></a>
+          <h1><a href="#osx">Releases</a></h1>
+          <p><small>Download the stable release version for your platform.</small></p>
+        </div>
+        <div class="link-button">
+          <a href="#snapshots"><i class="fas fa-shipping-fast selected"></i></a>
+          <h1><a href="#snapshots">Nightly Builds</a></h1>
+          <p><small>Try the nightly builds with all the new features and improvements. Enable the new Manifold geometry engine in Preferences for a huge performance boost.</small></p>
+        </div>
+      </div>
+    </section-head>
+
 		<section id="osx">
 			<h1>macOS</h1>
 			<div class="subsection">
@@ -196,7 +212,7 @@
 			<h1>Linux</h1>
 			<div id="ubuntu" class="subsection">
 				<h2>Debian / Ubuntu / Kubuntu</h2>
-				<p>OpenSCAD is available in the repositories of most recent distributions.
+				<p>OpenSCAD is available in the repositories of most recent distributions.</p>
 				<pre>
 					<code>$ sudo apt-get install openscad</code>
 				</pre>
