Added swizzle docs

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -148,8 +148,8 @@
           <dd>&nbsp;&nbsp;create a list</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Indexing_elements_within_vectors">var = list[2];</a></code></dt>
           <dd>&nbsp;&nbsp;index a list (from 0)</dd>
-          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Dot_notation_indexing">var = list.z;</a></code></dt>
-          <dd>&nbsp;&nbsp;dot notation indexing (x/y/z)</dd>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Vectors#Vector_Swizzling">list2 = list1.xyzz;</a></code></dt>
+          <dd>&nbsp;&nbsp;swizzling</dd>
         </dl>
       </article>
       <article>
